--- a/FreeRTOS/Demo/CORTEX_M0+_RaspberryPiPico_GCC/boot2/Makefile
+++ b/FreeRTOS/Demo/CORTEX_M0+_RaspberryPiPico_GCC/boot2/Makefile
@@ -4,7 +4,7 @@ include ../common.mk
 LDFLAGS += -nostartfiles
 
 BOOT2_SOURCES += boot2_w25q080.S
-BOOT2_INCLUDE_DIRS += -I ../includes -I ../includes/regs
+BOOT2_INCLUDE_DIRS += -I ../includes
 
 $(BUILD_DIR)/boot2/boot2_checksummed.S: $(BUILD_DIR)/boot2/boot2.bin
 	python3 pad_checksum -s 0xffffffff $(BUILD_DIR)/boot2/boot2.bin $@
